# dorset-lang

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  llvm-example.sm  test.ds  test.out  test.sm
.github/workflows/: cmake-single-platform.yml
docs/: INSTALL.md  README.md  docs.html  style.css
dorsetc/: CMakeLists.txt
dorsetc/include/: CMakeLists.txt
dorsetc/include/dorset-lang/: CMakeLists.txt
dorsetc/include/dorset-lang/AST/: AST.h
dorsetc/include/dorset-lang/Builder/: ASTBuilder.h  ExpressionBuilder.h
dorsetc/include/dorset-lang/Driver/: CLI.h
dorsetc/include/dorset-lang/LexicalAnalysis/: Lexer.h  Token.h
dorsetc/include/dorset-lang/Utils/: Error.h  OutputUtils.h  Version.h
dorsetc/include/dorsetDriver/: CMakeLists.txt
dorsetc/include/dorsetDriver/AST/: AST.h
dorsetc/include/dorsetDriver/Builder/: ASTBuilder.h  ExpressionBuilder.h
dorsetc/include/dorsetDriver/CLI/: CLI.h
dorsetc/include/dorsetDriver/LexicalAnalysis/: Lexer.h
dorsetc/include/dorsetDriver/Utils/: OutputUtils.h  Version.h
dorsetc/lib/: CMakeLists.txt
dorsetc/lib/AST/: AST.cpp  CMakeLists.txt
dorsetc/lib/Builder/: ASTBuilder.cpp  CMakeLists.txt  ExpressionBuilder.cpp
dorsetc/lib/Driver/: CLI.cpp  CMakeLists.txt
dorsetc/lib/LexicalAnalysis/: CMakeLists.txt  Lexer.cpp  Token.cpp
dorsetc/lib/Utils/: CMakeLists.txt  Error.cpp  OutputUtils.cpp  Version.cpp
dorsetc/lib/dorsetDriver/: CMakeLists.txt
dorsetc/lib/dorsetDriver/AST/: AST.cpp
dorsetc/lib/dorsetDriver/Builder/: ASTBuilder.cpp  ExpressionBuilder.cpp
dorsetc/lib/dorsetDriver/CLI/: CLI.cpp
dorsetc/lib/dorsetDriver/LexicalAnalysis/: Lexer.cpp  Token.cpp
dorsetc/lib/dorsetDriver/Utils/: Error.cpp  OutputUtils.cpp  Version.cpp
dorsetc/test/: CMakeLists.txt
dorsetc/test/src/: benchmarkTest_1.ds  benchmarkTest_2.ds  benchmarkTest_3.ds  benchmarkTest_4.ds  compileTest_1.ds  compileTest_10.ds  compileTest_11.ds  compileTest_13.ds  compileTest_14.ds  compileTest_5.ds  compileTest_6.ds  compileTest_7.ds  compileTest_9.ds
src/: AppEntry.cpp  ast.cpp  ast.h  astbuilder.cpp  astbuilder.h  cli.cpp  cli.h  error.cpp  error.h  expressionbuilder.cpp  expressionbuilder.h  lexer.cpp  lexer.h  main.cpp  outpututils.cpp  outpututils.h  parser.cpp  parser.h  scanner.cpp  scanner.h  token.cpp  token.h  version.h
src/AST/: AST.cpp  AST.h
src/Builder/: ASTBuilder.cpp  ASTBuilder.h  ExpressionBuilder.cpp  ExpressionBuilder.h
src/CLI/: CLI.cpp  CLI.h
src/LexicalAnalysis/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
src/Utils/: Error.cpp  Error.h  OutputUtils.cpp  OutputUtils.h  Version.h
tests/: BenchmarkTests.cpp  CompileTests.cpp  benchmarkTests.cpp  compileTests.cpp  tests.cpp
tests/src/: benchmarkTest_3.ds  benchmarkTest_4.ds  compileTest_1.ds  compileTest_10.ds  compileTest_11.ds  compileTest_12.ds  compileTest_2.ds  compileTest_3.ds  compileTest_4.ds  compileTest_5.ds  compileTest_6.ds  compileTest_7.ds  compileTest_9.ds  test_4.ds
